--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.petwalking"
-        minSdk 26
+        minSdk 29
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -88,7 +88,6 @@ dependencies {
 
     implementation 'junit:junit:4.+'
 
-
     implementation 'de.hdodenhof:circleimageview:3.1.0' //Circle ImageView
     implementation 'com.google.firebase:firebase-auth:21.0.8'
     implementation 'com.google.firebase:firebase-database:20.0.6'
@@ -98,4 +97,16 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    implementation 'io.github.ParkSangGwon:tedpermission:2.3.0'
+
+    implementation 'androidx.cardview:cardview:1.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0' // ListView 개선 버전
+    //noinspection GradleCompatible
+    implementation "com.android.support:cardview-v7:28.0.0"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.appcompat:appcompat:1.2.0"
+    implementation "androidx.cardview:cardview:1.0.0"
+
 }
